// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/migration migrateConfig(config, parentConfig) does not migrate multi days 1`] = `
Object {
  "schedule": "after 5:00pm on wednesday and thursday",
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates before and after schedules 1`] = `
Object {
  "major": Object {
    "schedule": Array [
      "after 10pm",
      "before 7am",
    ],
  },
  "minor": Object {
    "schedule": Array [
      "after 10pm every weekday",
      "before 7am every weekday",
    ],
  },
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates before and after schedules 2`] = `
Array [
  "after 10pm every weekday",
  "before 7am every weekday",
]
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates config 1`] = `
Object {
  "additionalBranchPrefix": "{{parentDir}}-",
  "autodiscover": true,
  "automerge": false,
  "automergeType": "branch",
  "baseBranches": Array [
    "next",
  ],
  "branchPrefix": "renovate/",
  "commitMessage": "{{#if semanticCommitType}}{{semanticCommitType}}{{#if semanticCommitScope}}({{semanticCommitScope}}){{/if}}: {{/if}}some commit message",
  "commitMessageExtra": "{{currentValue}} something",
  "constraints": Object {
    "python": "3.7",
  },
  "dependencyDashboard": true,
  "dependencyDashboardTitle": "foo",
  "enabled": true,
  "extends": Array [
    "config:js-app",
    "config:js-lib",
    ":dependencyDashboard",
  ],
  "hostRules": Array [
    Object {},
  ],
  "ignorePaths": Array [
    "node_modules/",
  ],
  "includeForks": true,
  "lockFileMaintenance": Object {
    "automerge": true,
    "schedule": "before 5am",
    "trustLevel": "low",
  },
  "major": Object {
    "automerge": false,
  },
  "meteor": Object {
    "enabled": true,
  },
  "minor": Object {
    "automerge": true,
  },
  "nvmrc": Object {
    "packageRules": Array [
      Object {
        "extends": Array [
          "node",
        ],
        "paths": Array [
          "node/**",
        ],
      },
    ],
  },
  "onboarding": false,
  "packageRules": Array [
    Object {
      "extends": Array [
        "foo",
      ],
      "paths": Array [
        "examples/**",
      ],
    },
    Object {
      "excludePackageNames": "foo",
      "groupName": "angular packages",
      "packagePatterns": "^(@angular|typescript)",
    },
    Object {
      "groupName": "foo",
      "packagePatterns": Array [
        "^foo",
      ],
    },
    Object {
      "enabled": false,
      "packageNames": Array [
        "angular",
      ],
      "packagePatterns": Array [
        "ang",
      ],
    },
    Object {
      "packageNames": Array [
        "guava",
      ],
      "versioning": "maven",
    },
    Object {
      "depTypeList": Array [
        "peerDependencies",
      ],
      "rangeStrategy": "widen",
    },
    Object {
      "depTypeList": Array [
        "devDependencies",
      ],
      "major": Object {
        "automerge": false,
      },
      "minor": Object {
        "automerge": true,
      },
      "schedule": null,
    },
    Object {
      "depTypeList": Array [
        "optionalDependencies",
      ],
      "major": Object {
        "automerge": false,
      },
      "minor": Object {
        "automerge": true,
      },
      "respectLatest": false,
      "schedule": "before 5am on Monday",
    },
  ],
  "patch": Object {
    "automerge": true,
  },
  "pip_setup": Object {
    "rebaseWhen": "never",
  },
  "pipenv": Object {
    "rebaseWhen": "conflicted",
  },
  "platform": "github",
  "poetry": Object {
    "rebaseWhen": "behind-base-branch",
    "versioning": "pep440",
  },
  "postUpdateOptions": Array [
    "gomodTidy",
  ],
  "prTitle": "{{#if semanticCommitType}}{{semanticCommitType}}{{#if semanticCommitScope}}({{semanticCommitScope}}){{/if}}: {{/if}}some pr title",
  "rangeStrategy": "bump",
  "rebaseWhen": "auto",
  "schedule": "on the first day of the month",
  "semanticCommitScope": "deps",
  "semanticCommitType": "fix",
  "separateMajorMinor": true,
  "separateMajorReleases": true,
  "separateMinorPatch": true,
  "suppressNotifications": Array [
    "lockFileErrors",
    "deprecationWarningIssues",
  ],
  "travis": Object {
    "enabled": true,
  },
  "trustLevel": "high",
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates more packageFiles 1`] = `
Object {
  "includePaths": Array [
    "package.json",
  ],
  "packageRules": Array [
    Object {
      "depTypeList": Array [
        "devDependencies",
      ],
      "paths": Array [
        "package.json",
      ],
      "rangeStrategy": "pin",
    },
    Object {
      "depTypeList": Array [
        "dependencies",
      ],
      "paths": Array [
        "package.json",
      ],
      "rangeStrategy": "pin",
    },
  ],
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates node to travis 1`] = `
Object {
  "node": Object {
    "automerge": false,
    "supportPolicy": Array [
      "lts",
    ],
  },
  "travis": Object {
    "enabled": true,
  },
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates packageFiles 1`] = `
Object {
  "includePaths": Array [
    "package.json",
    "backend/package.json",
    "frontend/package.json",
    "other/package.json",
  ],
  "packageRules": Array [
    Object {
      "paths": Array [
        "backend/package.json",
      ],
      "rangeStrategy": "replace",
    },
    Object {
      "paths": Array [
        "frontend/package.json",
      ],
      "rangeStrategy": "pin",
    },
    Object {
      "depTypeList": Array [
        "devDependencies",
      ],
      "paths": Array [
        "other/package.json",
      ],
      "rangeStrategy": "pin",
    },
    Object {
      "depTypeList": Array [
        "dependencies",
      ],
      "paths": Array [
        "other/package.json",
      ],
      "rangeStrategy": "pin",
    },
  ],
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates packages 1`] = `
Object {
  "packageRules": Array [
    Object {
      "groupName": "angular packages",
      "packagePatterns": "^(@angular|typescript)",
    },
  ],
}
`;

exports[`config/migration migrateConfig(config, parentConfig) migrates subconfig 1`] = `
Object {
  "lockFileMaintenance": Object {
    "packageRules": Array [
      Object {
        "depTypeList": Array [
          "optionalDependencies",
        ],
        "respectLatest": false,
      },
    ],
  },
}
`;

exports[`config/migration migrateConfig(config, parentConfig) overrides existing automerge setting 1`] = `
Object {
  "major": Object {
    "automerge": false,
  },
  "minor": Object {
    "automerge": true,
  },
  "packageRules": Array [
    Object {
      "major": Object {
        "automerge": false,
      },
      "minor": Object {
        "automerge": false,
      },
      "packagePatterns": "^(@angular|typescript)",
      "patch": Object {
        "automerge": true,
      },
    },
  ],
}
`;

exports[`config/migration migrateConfig(config, parentConfig) removes invalid configs 1`] = `
Object {
  "baseBranches": Array [],
  "commitMessage": "test",
  "ignorePaths": Array [],
  "includePaths": Array [
    "test",
  ],
  "rebaseWhen": "auto",
}
`;
